add ui_settings/sudir
