# docs/swagger.json
@@ -761,6 +761,52 @@
                 }
             }
         },
+        "/ui_settings/sudir": {
+            "post": {
+                "description": "Получение настроек для ui для авторизации через СУДИР",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ui_settings"
+                ],
+                "summary": "Получение настроек для ui для авторизации через СУДИР",
+                "parameters": [
+                    {
+                        "description": "Тело запроса",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.ClientNameRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.UiSudirSetting"
+                        }
+                    },
+                    "401": {
+                        "description": "Неизвестное название клиента",
+                        "schema": {
+                            "$ref": "#/definitions/domain.GrpcError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/domain.GrpcError"
+                        }
+                    }
+                }
+            }
+        },
         "/user/block_user": {
             "post": {
                 "consumes": [
@@ -1498,6 +1544,17 @@
                 }
             }
         },
+        "domain.ClientNameRequest": {
+            "type": "object",
+            "required": [
+                "clientName"
+            ],
+            "properties": {
+                "clientName": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.CreateRoleRequest": {
             "type": "object",
             "properties": {
@@ -1967,6 +2024,19 @@
                     "description": "Цвет в HEX",
                     "type": "string",
                     "example": "#ff4d4f"
+                }
+            }
+        },
+        "domain.UiSudirSetting": {
+            "type": "object",
+            "properties": {
+                "loginUrl": {
+                    "description": "URL для получения authCode для авторизации через СУДИР",
+                    "type": "string"
+                },
+                "logoutUrl": {
+                    "description": "URL для завершения сессии",
+                    "type": "string"
                 }
             }
         },
